<resources>
    <string name="app_name">IoT Controller</string>
    <string name="all_devices">All Devices</string>
    <string name="active_devices">Active Devices</string>
    <string name="inactive_devices">Inactive Devices</string>
    <string name="main_tab_layout_description">This is the tab to switch among the currently
    active, inactive and all devices available for your home!</string>
    <string name="devices">Devices</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="accountAlreadyCreated">Already have an account?</string>
    <string name="usernameInput">Please enter your username</string>
    <string name="emailInput">Please enter your email address</string>
    <string name="passwordInput">Please enter your password</string>
    <string name="reenterPasswordInput">Please re-enter your password</string>
    <string name="signIn">Sign in</string>
    <string name="email">Email Address</string>
    <string name="new_devices_addition_menu">Add New Device</string>
    <string name="dummyText1">ABC</string>
    <string name="dummyText2">DEF</string>
    <string name="dummyText3">GHI</string>
    <string name="registrationMsg">Please register your account</string>
    <string name="privacyPolicy">
Welcome to IoT Controller. Your privacy is important to us. This policy outlines how we collect, use, and protect your information.
\n
Information Collection:\n
Personal Information:\n
We collect information you provide, such as:\n
\n
Name\n
Email address\n
Non-Personal Information\n
We collect usage data, including:\n
\n
Device information:\n
IP address\n
Pages viewed\n
Information Use\n
We use your information to:\n
\n
Provide and improve services\n
Personalize your experience\n
Communicate with you\n
Analyze usage\n
Information Sharing\n
We only share your information:\n
\n
With your consent\n
With service providers\n
For legal reasons\n
In business transfers\n
Data Security\n
We protect your data but cannot guarantee complete security.\n
\n
Your Choices\n
You can:\n
\n
Update your information\n
Delete your account\n
Opt-out of marketing\n
Contact us at innovativesolutions@gmail.com for these requests.\n
\n
\n
Policy Changes:\n
We may update this policy. Changes will be posted in the app.\n
\n
Contact Us\n
Questions? Contact us at:\n
\n
innovativesolutions.com\n
innovativesolutions@gmailcom\n
+92 1111111111\n
\n
Thank you for using IoT Controller.</string>
</resources>